# Programming-Language-Concepts

problem-set-1-shriyanangia-main/: Problems1.hs  README.md  Tests.hs
problem-set-1-shriyanangia-main/problem-set-1-shriyanangia/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
problem-set-10-shriyanangia-main/: Problems10.cabal  Problems10.hs  README.md  Tests.hs
problem-set-11-shriyanangia-main/: Problems11.cabal  Problems11.hs  README.md  Tests.hs
problem-set-12-shriyanangia-main/: Problems12.cabal  Problems12.hs  README.md  Tests.hs
problem-set-13-shriyanangia-main/: Problems13.cabal  Problems13.hs  README.md  Tests.hs
problem-set-13-shriyanangia-main/Bird/: Parser.hs
problem-set-2-shriyanangia-main/: Problems2.cabal  Problems2.hs  README.md  Tests.hs
problem-set-3-shriyanangia-main/: Problems3.cabal  Problems3.hs  README.md  Tests.hs
problem-set-4-shriyanangia-main/: Problems4.cabal  Problems4.hs  README.md  Tests.hs
problem-set-5-shriyanangia-main/: Problems5.cabal  Problems5.hs  README.md  Tests.hs
problem-set-6-shriyanangia-main/: Problems6.cabal  Problems6.hs  README.md  Tests.hs
problem-set-7-shriyanangia-main/: Problems7.cabal  Problems7.hs  README.md  Tests.hs
problem-set-8-shriyanangia-main/: Problems8.cabal  Problems8.hs  README.md  Tests.hs
problem-set-9-shriyanangia-main/: Problems9.cabal  Problems9.hs  README.md  Tests.hs
project-1-toby-and-shriya-main/: Makefile  Project.cabal  README.md
project-1-toby-and-shriya-main/docs/: Challenge.md  MiniScheme.md  Notes  Overview.md  Tasks.md
project-1-toby-and-shriya-main/prov/: ChallengeTests.hs  Checker.hs  Interface.hs  Tests.hs
project-1-toby-and-shriya-main/src/: AST.hs  Evaluator.hs  Main.hs  Printer.hs
project-2-toby-and-shriya-main/: Project.cabal  README.md
project-2-toby-and-shriya-main/docs/: Challenge.md  MiniScheme.md  Overview.md  Tasks.md
project-2-toby-and-shriya-main/prov/: ChallengeTests.hs  Checker.hs  Tests.hs
project-2-toby-and-shriya-main/prov/Bird/: Printer.hs
project-2-toby-and-shriya-main/prov/Soln/: Datum.hs  Printer.hs  Semantics.hs
project-2-toby-and-shriya-main/src/: AST.hs  Evaluator.hs  Main.hs  Printer.hs
project-3-toby-and-shriya-main/: Makefile  Project.cabal  README.md
project-3-toby-and-shriya-main/docs/: Challenge.md  MiniScheme.md  Overview.md  Tasks.md
project-3-toby-and-shriya-main/prov/: Checker.hs  Parser.hs  Tests.hs
project-3-toby-and-shriya-main/prov/Soln/: Datum.hs  Printer.hs  Semantics.hs
project-3-toby-and-shriya-main/src/: Main.hs
