name:                Problems4
version:             0.1
build-type:          Simple
cabal-version:       >=1.10

executable Test
  main-is:             Tests.hs
  ghc-options:         -main-is Tests
  hs-Source-Dirs:      ./
  other-modules:       Problems4
  build-depends:       HUnit, base
  default-language:    Haskell2010
