name:                Project
version:             0.1
build-type:          Simple
cabal-version:       >=1.10

executable minis
  main-is:             Main.hs
  hs-Source-Dirs:      ./prov, ./src
  other-modules:       Bird.Printer, Interface, Parser, AST, Evaluator, Printer
  build-depends:       HUnit, base, transformers, mtl, containers, parsec
  default-language:    Haskell2010

executable Test
  main-is:             Tests.hs
  ghc-options:         -main-is Tests
  hs-Source-Dirs:      ./prov, ./src
  other-modules:       Bird.Printer, Interface, Parser, Main, Checker, AST, Evaluator, Printer, ChallengeTests
  build-depends:       HUnit, base, transformers, mtl, containers, parsec
  default-language:    Haskell2010
