name:                Project
version:             0.1
build-type:          Simple
cabal-version:       >=1.10

executable minis
  main-is:             Main.hs
  hs-Source-Dirs:      ./prov
                     , ./src
                     -- uncomment if you wish to import the P1 Soln from ./prov/Soln.
                     , ./prov/Soln
  other-modules:       Bird.Printer
                     , Interface
                     , Parser
                     -- uncomment if you wish to import the P1 Soln from ./prov/Soln.
                     --, Datum
                     , Printer
                     --, Semantics
                     , Evaluator
                     , AST
                                 
  build-depends:       HUnit
                     , base
                     , transformers
                     , mtl
                     , containers
                     , parsec
  default-language:    Haskell2010

executable Test
  main-is:             Tests.hs
  ghc-options:         -main-is Tests
  hs-Source-Dirs:      ./prov
                     , ./src
                     , ./prov/Soln
  other-modules:       Bird.Printer
                     , Interface
                     , Parser
                     , Main
                     -- uncomment if you wish to import the P1 Soln from ./prov/Soln.
                     -- , Datum
                      , Printer
                     -- , Semantics
                     , AST
                     , Evaluator
                
                      , Checker
                      , ChallengeTests
  build-depends:       HUnit
                     , base
                     , transformers
                     , mtl
                     , containers
                     , parsec
                     , random
                     , random-shuffle
  default-language:    Haskell2010
